@@ -1,1 +1,0 @@
-String::Approx makes it trivial to generate random strings.
